* initial release (1.0). * doc/pge.texi:  completed documentation. * doc/version.texi: * examples/singleglyph.py: * examples/singleimage.py: * examples/touchmany.py: * touchgui.py:  updated comments. * www/tools/texi2tr/html/about.html * www/tools/texi2tr/html/community.html * www/tools/texi2tr/html/development.html * www/tools/texi2tr/html/download.html * www/tools/texi2tr/html/heading.ht * www/tools/texi2tr/html/homepage.html * www/tools/texi2tr/html/index.html * www/tools/texi2tr/html/license.html * www/tools/texi2tr/html/news.html * www/tools/texi2tr/html/platforms.html * www/tools/texi2tr/html/release.html * www/tools/texi2tr/html/users.html * www/tools/texi2tr/src/config.pyc * a/www/tools/texi2tr/src/config.pyc * www/tools/texi2tr/src/navigation.pyc * a/www/tools/texi2tr/src/navigation.pyc * www/tools/texi2tr/src/outputdev.pyc

--- a/www/tools/texi2tr/html/license.html
+++ b/www/tools/texi2tr/html/license.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta name="Content-Style" content="text/css">
 <link rel="stylesheet" type="text/css" href="texi2tr.css" />
-<title>GNU PGE</title>
+<title>Touchgui</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 	<img src="200px-Heckert_GNU_white.png" alt="Heckert_GNU_white.png">
       </span>
       <span style="display:inline-block; vertical-align:middle; font-size: 50px">
-	GNU PGE
+	Touchgui
       </span>
     </h1>
 
@@ -56,8 +56,8 @@
 
 <div id="page">
   <div class="plain">
-    <h2>The home of GNU PGE</h2>
-    <p>GNU PGE is held under the GNU Public Licence v3.</p>
+    <h2>The home of Touchgui</h2>
+    <p>Touchgui is held under the GNU Public Licence v3.</p>
     <p>Copies of the licences can be found on the
       <a href="http://www.gnu.org/licenses">GNU</a> web site.</p>
   </div>
