--- a/www/tools/texi2tr/html/release.html
+++ b/www/tools/texi2tr/html/release.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta name="Content-Style" content="text/css">
 <link rel="stylesheet" type="text/css" href="texi2tr.css" />
-<title>GNU PGE</title>
+<title>Touchgui</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 	  <img src="200px-Heckert_GNU_white.png" alt="Heckert_GNU_white.png">
 	</span>
 	<span style="display:inline-block; vertical-align:middle; font-size: 50px">
-	  GNU PGE
+	  Touchgui
 	</span>
       </h1>
     </div>
@@ -58,8 +58,8 @@
 
 <div id="page">
   <div class="plain">
-    <h2>The home of the GNU PGE</h2>
-    <p>The latest stable release is pge-1.0</p>
+    <h2>The home of the Touchgui</h2>
+    <p>The latest stable release is touchgui-1.0</p>
   </div>
 </div>
 </body>
