--- a/www/tools/texi2tr/html/about.html
+++ b/www/tools/texi2tr/html/about.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta name="Content-Style" content="text/css">
 <link rel="stylesheet" type="text/css" href="texi2tr.css" />
-<title>GNU PGE</title>
+<title>Touchgui</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 	<img src="200px-Heckert_GNU_white.png" alt="Heckert_GNU_white.png">
       </span>
       <span style="display:inline-block; vertical-align:middle; font-size: 50px">
-	GNU PGE
+	Touchgui
       </span>
     </h1>
 
@@ -56,11 +56,9 @@
 
 <div id="page">
   <div class="plain">
-    <h2>The home of GNU PGE</h2>
+    <h2>The home of Touchgui</h2>
     <p>
-      GNU PGE is a physics engine which is integrated into Python and Pygame.
-      From the users perspective it is a Python module which will coordinate
-      physics behaviour in a 2D world.</p>
+      Touchgui is a touch based gui library written in Python for Pygame.</p>
   </div>
 </div>
 </body>
