--- a/www/tools/texi2tr/html/development.html
+++ b/www/tools/texi2tr/html/development.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>GNU PGE development</title>
+<title>Touchgui development</title>
 <meta http-equiv="refresh" content="0;url=pge-6.html"></head>
 <body>
 git access etc.
