--- a/www/tools/texi2tr/html/download.html
+++ b/www/tools/texi2tr/html/download.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta name="Content-Style" content="text/css">
 <link rel="stylesheet" type="text/css" href="texi2tr.css" />
-<title>GNU PGE</title>
+<title>Touchgui</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 	<img src="200px-Heckert_GNU_white.png" alt="Heckert_GNU_white.png">
       </span>
       <span style="display:inline-block; vertical-align:middle; font-size: 50px">
-	GNU PGE
+	Touchgui
       </span>
     </h1>
 
@@ -56,14 +56,14 @@
 
 <div id="page">
   <div class="plain">
-    <h2>The home of GNU PGE</h2>
-    <p>GNU PGE is available in source and debian package format.
+    <h2>The home of Touchgui</h2>
+    <p>Touchgui is available in source and debian package format.
       <div>
 	<span style="display:inline-block; vertical-align:middle; margin-left: 3%">
 	  <img src="release.png" alt="users"</img></span>
 	       <span style="display:inline-block; vertical-align:middle">
 		 Release of pge
-		 <a href="http://floppsie.comp.glam.ac.uk/download/pge/pge-1.0.tar.gz">pge-1.0.tar.gz</a>.
+		 <a href="http://floppsie.comp.glam.ac.uk/download/touchgui/touchgui-1.0.tar.gz">touchgui-1.0.tar.gz</a>.
 	       </span>
       </div>
     </p>
