--- a/www/tools/texi2tr/html/index.html
+++ b/www/tools/texi2tr/html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>GNU PGE</title>
+<title>Touchgui</title>
 <meta http-equiv="refresh" content="0;url=homepage.html"></HEAD>
 <body>
-The home of GNU PGE
+The home of Touchgui
 </body>
 </html>
