--- a/www/tools/texi2tr/html/news.html
+++ b/www/tools/texi2tr/html/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>GNU PGE news</title>
+<title>Touchgui news</title>
 <meta http-equiv="refresh" content="0;url=pge.html"></head>
 <body>
 no news is good news!  The news section is still being created.
