--- a/www/tools/texi2tr/html/platforms.html
+++ b/www/tools/texi2tr/html/platforms.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta name="Content-Style" content="text/css">
 <link rel="stylesheet" type="text/css" href="texi2tr.css" />
-<title>GNU PGE</title>
+<title>Touchgui</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 	<img src="200px-Heckert_GNU_white.png" alt="Heckert_GNU_white.png">
       </span>
       <span style="display:inline-block; vertical-align:middle; font-size: 50px">
-	GNU PGE
+	Touchgui
       </span>
     </h1>
 
@@ -56,8 +56,8 @@
 
 <div id="page">
   <div class="plain">
-    <h2>The home of the GNU PGE</h2>
-    <p>GNU PGE is available as a Debian package for the x86_64 Jessie platform.
+    <h2>The home of the Touchgui</h2>
+    <p>Touchgui is available as a Debian package for the x86_64 Stretch platform.
 
       <table width="100%">
 	<tr valign="top">
