--- a/www/tools/texi2tr/html/download.html
+++ b/www/tools/texi2tr/html/download.html
@@ -62,8 +62,7 @@
 	<span style="display:inline-block; vertical-align:middle; margin-left: 3%">
 	  <img src="release.png" alt="users"</img></span>
 	       <span style="display:inline-block; vertical-align:middle">
-		 Release of pge
-		 <a href="http://floppsie.comp.glam.ac.uk/download/touchgui/touchgui-1.0.tar.gz">touchgui-1.0.tar.gz</a>.
+		 <a href=https://github.com/gaiusm/touchgui>Source code of touchgui in git</a>.
 	       </span>
       </div>
     </p>
